# oi-helper

./: .gitignore  README.md  oi-helper.py  pyproject.toml  requirements-dev.txt  requirements.txt
oihelper/: auth.py  common.py  judger.py  parser.py  submitter.py
oihelper/cli/: common.py  login.py  parse_problem.py  run_program.py  submit_program.py
