[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oihelper"
version = "0.1.1"
description = "Yet another helper for Olympiad in Informatics."
readme = "README.md"
authors = [{ name = "Sam Zhang", email = "samzhangjy@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["helper", "cli", "oi", "click"]
dependencies = [
    "click >= 8.1.3",
    "requests >= 2.28.1",
    "psutil >= 5.9.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pip-tools", "bumpver"]

[project.urls]
Homepage = "https://github.com/samzhangjy/oi-helper"

[project.scripts]
oi-helper = "oihelper.__main__:cli"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
